--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <p class="text-xl text-gray-600">Full-stack Data Scientist</p>
             <div class="mt-2 text-gray-500">
                 New York, NY | 917-744-5867 | den.sison@gmail.com | 
-                <a href="https://linkedin.com/in/your-profile" class="text-blue-600 hover:text-blue-800">LinkedIn</a> |
-                <a href="https://github.com/your-username" class="text-blue-600 hover:text-blue-800">GitHub</a>
+                <a href="https://linkedin.com/in/denise-sison" class="text-blue-600 hover:text-blue-800">LinkedIn</a> |
+                <a href="https://github.com/tinyboxes" class="text-blue-600 hover:text-blue-800">GitHub</a>
             </div>
         </header>
 
